# backlink

./: .gitignore  README.md  pyproject.toml  readme.md
backlink_bot/: cli.py  config.py  db.py  services.py
backlink_bot/admin/: app.py
backlink_bot/admin/static/css/: styles.css
backlink_bot/admin/templates/: base.html  categories.html  dashboard.html  executions.html  recipe_detail.html  recipes.html
backlink_bot/bot/: actions.py  cli_train.py  executor.py  recipe_manager.py  recipe_serializer.py  trainer.py  trainer_recorder.py  variables_manager.py
backlink_bot/utils/: logging.py
src/backlink/: __init__.py  config.py  database.py  models.py
src/backlink.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/backlink/actions/: __init__.py  playwright.py
src/backlink/admin/: __init__.py  app.py  dependencies.py
src/backlink/admin/templates/: ai_content.html  base.html  categories.html  category_requests.html  dashboard.html  executions.html  layout.html  login.html  recipes.html  (+3 more)
src/backlink/cli/: main.py
src/backlink/services/: __init__.py  admin.py  ai.py  analytics.py  auth.py  categories.py  executor.py  notifications.py  recipes.py  scheduling.py  settings.py  training.py  variables.py
src/backlink/utils/: __init__.py  files.py  logging.py  strings.py
src/data/: backlink.db
src/data/recipes/: florevit.com.yaml
src/data/snapshots/: 1.html
tests/: test_admin_api.py  test_admin_service.py  test_ai_fallbacks.py  test_auth_service.py  test_auth_settings.py  test_password_hashing.py  test_variables.py
(+8 files in other folders)
